[package]
edition = "2021"
name = "grower123"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
rtt-target = "0.4.0"
# rust_gpiozero = "0.2.0"
